Got Cloning To Work
Right now a clone is created. It will be sent a link to your actions and will trail behind you 200 frames. Does this forever. Only does movement and rotations right now.

--- a/Clone Shot 1/Assembly-CSharp.csproj
+++ b/Clone Shot 1/Assembly-CSharp.csproj
@@ -52,12 +52,16 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\BackgroundMusicPlayer.cs" />
-     <Compile Include="Assets\Scripts\CloneMovement.cs" />
+     <Compile Include="Assets\Scripts\CloneController.cs" />
      <Compile Include="Assets\Scripts\FPSInput.cs" />
      <Compile Include="Assets\Scripts\MouseLook.cs" />
      <Compile Include="Assets\Scripts\PistolShot.cs" />
      <Compile Include="Assets\Scripts\PlayerCharacter.cs" />
      <Compile Include="Assets\Scripts\RayShooter.cs" />
+     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerAction.cs" />
+     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerMovementAction.cs" />
+     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerTurnAction.cs" />
+     <Compile Include="Assets\Scripts\Recording\PlayersActionsInRound.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
