--- a/Clone Shot 1/Assembly-CSharp.csproj
+++ b/Clone Shot 1/Assembly-CSharp.csproj
@@ -57,9 +57,9 @@
      <Compile Include="Assets\Scripts\MouseLook.cs" />
      <Compile Include="Assets\Scripts\PistolShot.cs" />
      <Compile Include="Assets\Scripts\PlayerCharacter.cs" />
-     <Compile Include="Assets\Scripts\RayShooter.cs" />
      <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerAction.cs" />
      <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerMovementAction.cs" />
+     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerShootAction.cs" />
      <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerTurnAction.cs" />
      <Compile Include="Assets\Scripts\Recording\PlayersActionsInRound.cs" />
  <Reference Include="UnityEngine.UI">
