--- a/Clone Shot 1/Clone Shot 1.csproj
+++ b/Clone Shot 1/Clone Shot 1.csproj
@@ -290,7 +290,9 @@
     <Compile Include="Assets\Scripts\CloneController.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\FPSInput.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\CloneShot Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\PlayerSetup.cs" />
+    <Compile Include="Assets\Scripts\CloneShot Scripts\PlayerShoot.cs" />
     <Compile Include="Assets\Scripts\PistolShot.cs" />
     <Compile Include="Assets\Scripts\PlayerCharacter.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerAction.cs" />
