--- a/Clone Shot 1/Clone Shot 1.csproj
+++ b/Clone Shot 1/Clone Shot 1.csproj
@@ -287,19 +287,19 @@
   <ItemGroup>
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\Scripts\BackgroundMusicPlayer.cs" />
+    <Compile Include="Assets\Scripts\Character.cs" />
     <Compile Include="Assets\Scripts\CloneController.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\FPSInput.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\MouseLook.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\CloneShot Scripts\PlayerSetup.cs" />
-    <Compile Include="Assets\Scripts\CloneShot Scripts\PlayerShoot.cs" />
-    <Compile Include="Assets\Scripts\PistolShot.cs" />
-    <Compile Include="Assets\Scripts\PlayerCharacter.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerAction.cs" />
+    <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerJumpAction.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerMovementAction.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerShootAction.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayerActions\PlayerTurnAction.cs" />
     <Compile Include="Assets\Scripts\Recording\PlayersActionsInRound.cs" />
+    <Compile Include="Assets\Scripts\Shoot.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
