--- a/Clone Shot 1/Assembly-CSharp.csproj
+++ b/Clone Shot 1/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GameManager.cs" />
+     <Compile Include="Assets\KillScript.cs" />
      <Compile Include="Assets\Scripts\Character.cs" />
      <Compile Include="Assets\Scripts\CloneController.cs" />
      <Compile Include="Assets\Scripts\CloneShot Scripts\FPSInput.cs" />
